@@ -187,7 +187,7 @@ case $arch in
 	device="/dev/dsp"
     fi
     ;;
-  NetBSD)
+  NetBSD|OpenBSD)
     arch_defines="-t sunau"
     if [ -z "$device" ]; then
         device="/dev/audio"
